templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
spec:
  type: ClusterIP
  clusterIP: None # Headless
  selector:
    name: nginx
