templates/service-with-domain.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  labels:
    label-key1: label-value1
spec:
  type: ExternalName

  # Alias dari external-service.default.svc.cluster.local
  externalName: example.com
  ports:
    - port: 80
